[package]
name = "tween"
version = "1.0.1"
edition = "2021"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sanbox-irl/tween"
description = "A tweening library for games"
categories = ["rendering::data-formats", "game-development"]

[features]
default = ["std"]
std = []

[dependencies]
libm = { version = "0.2.2", optional = true }
glam = { version = "0.21", optional = true }
nalgebra = { version = "0.31.4", optional = true }

[dev-dependencies]
criterion = "0.4"
rand = "0.8.5"
paste = "1.0.8"
approx = "0.5"
easer = "0.2.1"
static_assertions = "1.1"

[[example]]
name = "erased"
required-features = ["std"]

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "dyn_vs_not"
harness = false
